text clipping fix

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -34,7 +34,7 @@ body {
         h1{
             font-size: 50px;
             line-height: 30px;
-            margin-bottom: 15px;
+            margin-bottom: 25px;
             color: #CCCCCD;
         }
         p{
